mdapipkg/objects/Product_Variant__c.object
<CustomObject>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Grey</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Product_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_service__c</fullName>
        <label>Fulfillment service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>manual</fullName>
                </value>
                <value>
                    <fullName>zencraft</fullName>
                </value>
                <value>
                    <fullName>webgility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Name__c</fullName>
        <label>Integration Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Policy__c</fullName>
        <label>Inventory Policy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Continue</fullName>
                </value>
                <value>
                    <fullName>Deny</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inventory_Quantity__c</fullName>
        <label>Inventory Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <description>This will be a dependent picklist connected to variant type</description>
        <label>Option</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Variant_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Pink</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>XS</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>XL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Title__c</fullName>
        <label>Product Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Variants</relationshipLabel>
        <relationshipName>Product_Variants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requires_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>XS</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>XL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Variant_Type__c</fullName>
        <label>Variant Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Color</fullName>
                </value>
                <value>
                    <fullName>Size</fullName>
                </value>
                <value>
                    <fullName>Color/Size</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weight_Unit__c</fullName>
        <label>Weight Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>kg</fullName>
                </value>
                <value>
                    <fullName>gems</fullName>
                </value>
                <value>
                    <fullName>lbs</fullName>
                </value>
                <value>
                    <fullName>oz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>barcode__c</fullName>
        <label>barcode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sku__c</fullName>
        <label>sku</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Product Variant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Option__c</columns>
        <columns>Position__c</columns>
        <columns>Price__c</columns>
        <columns>Product__c</columns>
        <columns>Variant_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Variant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Variants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>